<resources>
    <string name="app_name">Linear Equation Solver</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="del">DEL</string>
    <string name="point">.</string>
    <string name="plus">+</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="subtract">-</string>
    <string name="change_num">Change equation number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eq1">Eq1</string>
    <string name="eq2">Eq2</string>
    <string name="eq3">Eq3</string>
    <string name="title_activity_answer">AnswerActivity</string>
    <string name="eq_hint">coefficient are separated by a comma</string>
</resources>